--- a/shopify-challenge.ipynb
+++ b/shopify-challenge.ipynb
@@ -999,11 +999,14 @@
    "metadata": {},
    "source": [
     "```\n",
-    "SELECT Products.ProductName, SUM(Quantity) AS TotalQuantity\n",
-    "FROM Orders, OrderDetails, Customers, Products\n",
-    "WHERE Customers.Country = \"Germany\" AND OrderDetails.OrderID = Orders.OrderID AND OrderDetails.ProductID = Products.ProductID AND Customers.CustomerID = Orders.CustomerID\n",
-    "GROUP BY Products.ProductID\n",
-    "ORDER BY TotalQuantity DESC\n",
+    "SELECT Products.ProductName, SUM(OrderDetails.Quantity) AS TotalOrderAmount\n",
+    "FROM Products\n",
+    "JOIN OrderDetails ON OrderDetails.ProductID = Products.ProductID\n",
+    "JOIN Orders ON Orders.OrderID = OrderDetails.OrderID\n",
+    "JOIN Customers ON Customers.CustomerID = Orders.CustomerID\n",
+    "WHERE Customers.Country = \"Germany\"\n",
+    "GROUP BY Products.ProductName\n",
+    "ORDER BY SUM(OrderDetails.Quantity) DESC\n",
     "LIMIT 1;\n",
     "```\n",
     "\n",
